# bilbo-tts

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  design.md  implementation.md  milestone-4-plan.md  performance.md  pyproject.toml
config/lexicons/: finance-it.yaml  kokoro-it.yaml
config/qualification/: asr.yaml  chatterbox-fp16.yaml  chatterbox-nowm.yaml  chatterbox-turbo.yaml  chatterbox.yaml  corpus.yaml  fake.yaml  kokoro-nicola-s120.yaml  kokoro.yaml
docs/: adding-a-book.md  assembly.md  design.md  implementation.md  performance.md  pronunciation-lexicons.md  running-a-book.md  synthesis.md  text-pipeline.md  tts-qualification.md  verification.md
scripts/: ab_timing.py  bootstrap-pixi.sh
src/bilbo_tts/: __init__.py  artifacts.py  assembly.py  benchmarking.py  build_bundle.py  chapter_selection.py  chunk_service.py  chunking.py  cli.py  config.py  doctor.py  models.py  review_service.py  run_service.py  serialization.py  stages.py  synthesis.py  verification.py  verification_process.py
src/bilbo_tts/asr/: __init__.py  contracts.py  mlx_whisper.py
src/bilbo_tts/ingest/: __init__.py  common.py  latex.py  pandoc.py  pdf.py  service.py
src/bilbo_tts/normalization/: __init__.py  engine.py  lexicon.py  rules.py  service.py
src/bilbo_tts/qualification/: __init__.py  asr.py  asr_metrics.py  audio.py  candidates.py  corpus.py  listening.py  results.py  runner.py
src/bilbo_tts/tts/: __init__.py  audio.py  chatterbox.py  contracts.py  factory.py  fake.py  kokoro.py  validation.py
tests/: test_ab_timing.py  test_artifacts.py  test_asr_adapter.py  test_asr_metrics.py  test_asr_qualification.py  test_assembly.py  test_build_bundle.py  test_chapter_selection.py  test_chunk_service.py  test_chunking.py  test_cli.py  test_config.py  test_doctor.py  test_ingest_common.py  test_ingest_latex.py  test_ingest_pandoc.py  test_ingest_pdf.py  test_ingest_service.py  test_models.py  test_normalization.py  test_normalization_service.py  test_qualification_audio.py  test_qualification_cli.py  test_qualification_config.py  test_qualification_runner.py  test_review_service.py  test_run_service.py  test_synthesis.py  test_tts.py  test_tts_adapters.py  test_verification.py  test_verification_process.py
tests/fixtures/: README.md  update_ingest_goldens.py  update_text_goldens.py
tests/fixtures/books/tiny-latex/: book.yaml
tests/fixtures/books/tiny-latex/source/: chapter-two.tex  main.tex
tests/fixtures/books/tiny-pdf/: book.yaml  generate_fixture.py
tests/fixtures/books/tiny-scanned/: book.yaml  generate_scanned_pdf.py
tests/fixtures/golden/tiny-latex/: book-document.json  chunk-manifest.json  chunk-summary.json  chunking.md  extraction.md  normalization.md  normalize-summary.json  normalized-document.json
tests/fixtures/golden/tiny-pdf/: book-document.json  chunk-manifest.json  chunk-summary.json  chunking.md  extraction.md  normalization.md  normalize-summary.json  normalized-document.json
tests/hardware/: test_chatterbox_smoke.py  test_kokoro_smoke.py  test_whisper_smoke.py
tests/integration/: conftest.py  test_assembly_cli.py  test_ingest_cli.py  test_run_cli.py  test_synthesis_cli.py  test_text_pipeline_cli.py  test_verification_stage.py
